# fabricate

./: .gitignore  .luarc.json  Cargo.toml  LICENSE  README.md  flake.nix  go.mod  go.sum
.github/workflows/: docs-pages.yml
docs/: book.toml  cli.rst  conf.py  general.rst  index.rst
docs/config/: builtins.rst  fab.rst  functions.rst  globals.rst  index.rst  object-types.rst
docs/src/: SUMMARY.md  cli.md  configuration.md  fab-library.md  introduction.md  objects.md
fabricate/: configure.go  fabricate.go
fabricate/lua/: builtins.fab.lua  builtins.general.lua  definitions.fab.lua  definitions.obj.lua
src/: cache.rs  compiler.rs  configure.go  dependency.rs  executable.rs  fabricate.go  include_dir.rs  linker.rs  main.rs  object.rs  source.rs
src/lua/: builtin.lua  builtins.fab.lua  builtins.general.lua  definitions.d.lua  definitions.fab.lua  definitions.obj.lua
src/setup/: lua.rs  mod.rs  ninja.rs
src/setup/lua/: builtins.lua  generic.lua
src/setup/lua/modules/: ar.lua  lang_c.lua  lang_nasm.lua  ld.lua
src/setup/lua/stubs/: fab.lua  objects.lua
