[package]
name = "fab"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.10.3", features = ["lua54", "vendored"] }
ninja-writer = "0.3.0"
clap = { version = "4.5.37", features = ["derive"] }
toml = "0.8.20"
thiserror = "2.0.12"
log = "0.4.27"
which = { version = "7.0.3", features = ["regex"] }
regex = "1.11.1"
colog = "1.3.0"
glob = "0.3.2"
git2 = "0.20.1"
json = "0.12.4"
