[package]
name = "fabricate"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
git2 = "0.20.3"
glob = "0.3.3"
mlua = { version = "0.11.5", features = ["lua54", "vendored"] }
pathdiff = "0.2.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
which = "8.0.0"
